<resources>
    <string name="app_name">TNSTC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_map">Map</string>
    <string name="menu_directions">Directions</string>
    <string name="menu_showtimings">Show Timings</string>
    <string name="menu_contactus">Contact Us</string>



    <string name="places_initial_prompt">Choose a start point</string>
    <string name="places_final_prompt">Choose a destination</string>
    <string-array name="places_initial_list">
        <item>Choose a Start Point</item>
        <item>Toll Gate</item>
    </string-array>
    <string-array name="places_final_list">
        <item>Choose a Destination</item>
        <item>Planetarium</item>
        <item>Nuclear</item>
        <item>DRDO</item>
        <item>Periyar Gallery</item>
    </string-array>
</resources>
